--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 
 collections:
-- my_trends
-    output: true
+  my_trends:
+    output:true
